frontend/src/style.css
    html,
    body {
      width: 100%;
      height: 100%;
      margin: 0;
      padding: 0;
      display: flex;
      /* Make body a flex container */
      flex-direction: column;
      /* Column layout */
      background-color: #008080;
      font-family: 'ms_sans_serif', sans-serif;
    }

p {
  font-size: 16px;
}

#root {
  height: 100vh;
  margin: 0;
  padding: 0;
}

.title-bar {
  background: #ff854d;
  background: linear-gradient(90deg,rgba(255, 133, 77, 1) 0%, rgba(255, 166, 125, 1) 26%, rgba(237, 232, 202, 1) 100%);
}

.window {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    margin: 0;
    box-sizing: border-box;
}

.window-body {
  flex-grow: 1;
  /* Fills the remaining space below the title bar */
  overflow: auto;
  /* Scroll if content exceeds */
  padding: 7.5% 20%;
}

.no-border-window {
  border: none !important;
  box-shadow: none !important;
  background: none !important;
}

